# pss-pokemon

./: .env.example  .gitignore  AGENTS.md  README.md  biome.jsonc  package.json  tsconfig.json
.github/: dependabot.yml
backend/: AGENTS.md  pyproject.toml
backend/src/pokemon_harness/: action_schemas.py  action_supervisor.py  app.py  config.py  controller_lease.py  dashboard_routes.py  dashboard_state.py  emulator.py  fake_emulator.py  fake_main.py  gen1_catalog.py  gen1_collision.py  gen1_maps.py  gen1_ram_details.py  grid_overlay.py  main.py  make_intro_save_state.py  model_base.py  navigation_routes.py  preflight.py  pyboy_emulator.py  save_store.py  schemas.py  state_parser.py
backend/tests/: test_action_schema.py  test_action_supervisor.py  test_app_abi_routes.py  test_app_action_routes.py  test_app_routes.py  test_config_preflight.py  test_dashboard_surfaces.py  test_gen1_collision.py  test_navigation_surfaces.py  test_pyboy_emulator.py  test_save_store.py  test_state_parser.py  test_state_parser_expanded.py
cli/: AGENTS.md  biome.jsonc  package.json
docs/: benchmark-adapter-matrix.json  benchmark-adapter-matrix.md  trace-corpus.md
scripts/: check.sh
src/: action-quality-metrics.test.ts  action-quality-metrics.ts  action-schemas.ts  agent-env.test.ts  agent-env.ts  agent-main-session.test.ts  agent-main.ts  agent-memory-file-store.ts  agent-model-image-composer.test.ts  agent-observation-types.ts  agent-observation.ts  agent-runtime.ts  agent-terminal-view.test.ts  agent-tools.test.ts  agent-tools.ts  api-client.test.ts  api-client.ts  backend-session-cli.test.ts  backend-session-cli.ts  backend-session-errors.ts  backend-session-manager.test.ts  backend-session-manager.ts  backend-session-paths.ts  backend-session-process.test.ts  backend-session-process.ts  backend-session-registry.test.ts  backend-session-registry.ts  backend-session-selection.ts  backend-session-types.ts  battle-policy.test.ts  battle-policy.ts  cli-args.test.ts  cli-args.ts  control-errors.ts  dialog-recovery-policy.test.ts  dialog-recovery-policy.ts  env-files.ts  eval-metrics-main.ts  game-state-schemas.ts  human-control-plane.test.ts  (+44 more)
(+68 files in other folders)
